Fixes #173 - application error on ios devices

--- a/public/css/roomIOS.css
+++ b/public/css/roomIOS.css
@@ -2,6 +2,8 @@ body {
     background-color: #000;
     font-family: 'Ropa Sans', sans-serif;
     color: #fff;
+    margin: 0;
+    padding: 0;
 }
 
 body a {
@@ -12,7 +14,7 @@ body a {
     font-size: 18px;
     text-align: center;
     width: 100%;
-    padding: 10px;
+    padding: 10px 0 10px 0;
     border-radius: 5px;
     background-color: #999;
     top: 35%;
